# CS50P

./: .gitignore  Harvard CS50P.md  README.md  pyproject.toml
week0/: einstein.py  faces.py  indoor.py  playback.py  tip.py
week1/: bank.py  deep.py  extensions.py  interpreter.py  meal.py
week2/: camel.py  coke.py  nutrition.py  plates.py  twttr.py
week3/: fuel.py  grocery.py  outdated.py  outdated_datetime.py  taqueria.py
week4/: adieu.py  bitcoin.py  emojize.py  game.py  professor.py
week5/: bank.py  fuel.py  plates.py  test_bank.py  test_fuel.py  test_plates.py  test_twttr.py  twttr.py
week6/: foo.py  lines.py  pizza.py  scourgify.py  shirt.py
week7/: numb3rs.py  response.py  test_numb3rs.py  test_response.py  test_um.py  test_working.py  um.py  watch.py  working.py
week8/: jar.py  seasons.py  shirtificate.py  test_jar.py  test_seasons.py
