[project]
name = "cs50p"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "fpdf2>=2.8.4",
    "inflect>=7.5.0",
    "pillow>=11.3.0",
    "pytest>=8.4.1",
    "tabulate>=0.9.0",
    "validators>=0.35.0",
]
